src/test/ui/closures/2229_closure_analysis/diagnostics/mut_ref.stderr
warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/mut_ref.rs:4:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error[E0596]: cannot borrow `**ref_mref_x` as mutable, as it is behind a `&` reference
  --> $DIR/mut_ref.rs:13:13
   |
LL |     let ref_mref_x = &mref_x;
   |                      ------- help: consider changing this to be a mutable reference: `&mut mref_x`
LL | 
LL |     let c = || {
   |             ^^ `ref_mref_x` is a `&` reference, so the data it refers to cannot be borrowed as mutable
LL |
LL |         **ref_mref_x = y;
   |         ------------ mutable borrow occurs due to use of `**ref_mref_x` in closure

error[E0596]: cannot borrow `**mref_ref_x` as mutable, as it is behind a `&` reference
  --> $DIR/mut_ref.rs:27:13
   |
LL |     let c = || {
   |             ^^ cannot borrow as mutable
LL |
LL |         **mref_ref_x = y;
   |         ------------ mutable borrow occurs due to use of `**mref_ref_x` in closure

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0596`.
